<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.sunshine.app.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="10"
        android:icon="@drawable/reload"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_store_to_db"
        android:orderInCategory="20"
        android:title="@string/action_store_to_db"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup_db"
        android:orderInCategory="30"
        android:title="@string/action_backup_db"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load_db"
        android:orderInCategory="30"
        android:title="@string/action_load_db"
        app:showAsAction="never" />
</menu>
